# appbike

./: .gitignore  .replit  app.yml  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  bicioffice-deploy.md  global-database-url.md
artifacts/appbike/: .gitignore  README.md  app.yaml  app.yml  build_databricks.sh  index.html  package.json
artifacts/appbike/.replit-artifact/: artifact.toml
artifacts/appbike/public/: sw.js
artifacts/appbike/server/: db.py  gamification.py  models.py  security.py
artifacts/appbike/src/: App.tsx  index.css
artifacts/appbike/src/components/: layout.tsx
artifacts/appbike/src/hooks/: use-admin.ts  use-auth.tsx  use-gamification.ts  use-rides.ts
artifacts/appbike/src/lib/: api.ts
artifacts/appbike/src/pages/: admin.tsx  historial.tsx  home.tsx  ranking.tsx  registrar.tsx
artifacts/appbike/src/pages/auth/: login.tsx  register.tsx
databricks_app/server/: db.py  main.py
